This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

12-Mar 2009 (Zesstra)
  - (slaballoc.c, smalloc.c)
    Fixed a bug in esbrk() during memory allocation, where SINT
    (sizeof(word_t)) was not taken into account in the calculation of a block
    size, leading to crashes afterwards. (#611)
  - (efuns.c)
    Fixed an off-by-one buffer overflow in v_sha1(). Actually removed the \0
    written after the buffer, because it was not needed.

10-Mar 2009 (Zesstra)
  - (pkg-idna.c)
    Fixed the evaluation of the arguments of f_idna_stringprop() and removed a
    memory leak, because the argument string was not free'd. Additionally
    avoided to put a return value on the stack in case of an error (#498)

03-Mar-2009 (Zesstra)
  - (actions.c, configure.in, config.h.in, lex.c)
    Made the maximum length of commands configurable.
      COMMAND_FOR_OBJECT_BUFSIZE was renamed to MAX_COMMAND_LENGTH and
      made configurable at compile time via the --max-command-length, 
      defaulting to 1000.
    Added a permanent define __MAX_COMMAND_LENGTH__

28-Feb-2009 (Zesstra)
  - (xalloc.c|h, smalloc.c, main.c, lex.c, slaballoc.c, backend.c,
      string_spec, mudlib/sys/rtlimits.h, src/settings*, doc/master/)
    Renamed --max-malloced to --hard-memory-limit and  MAX_MALLOCED to
    HARD_MALLOC_LIMIT_DEFAULT and changed the mud configurations.
    Introduced a --soft-memory-limit/SOFT_MALLOC_LIMIT_DEFAULT
    Added set_* and get_memory_limit() and related constants for managing the
    memory limits
    Added check_for_soft_malloc_limit() to check the soft memory limit
    Added notify_lowmemory_condition() to call low_memory() in the mudlib master
    Added calls to notify_lowmemory_condition() and
      check_for_soft_malloc_limit() in the ba ckend cycle
    Added documentation for new memory limit and low_memory().
    
27-Feb-2009 (Fuchur)
  - (settings/default)